src/test/ui/consts/const-block-const-bound.stderr
error[E0277]: the trait bound `UnconstDrop: Drop` is not satisfied
  --> $DIR/const-block-const-bound.rs:18:11
   |
LL |         f(UnconstDrop);
   |         - ^^^^^^^^^^^ the trait `Drop` is not implemented for `UnconstDrop`
   |         |
   |         required by a bound introduced by this call
   |
note: required by a bound in `f`
  --> $DIR/const-block-const-bound.rs:4:15
   |
LL | const fn f<T: ~const Drop>(x: T) {}
   |               ^^^^^^^^^^^ required by this bound in `f`
help: consider introducing a `where` bound, but there might be an alternative better way to express this requirement
   |
LL | fn main() where UnconstDrop: Drop {
   |           +++++++++++++++++++++++

error[E0277]: the trait bound `NonDrop: Drop` is not satisfied
  --> $DIR/const-block-const-bound.rs:20:11
   |
LL |         f(NonDrop);
   |         - ^^^^^^^ the trait `Drop` is not implemented for `NonDrop`
   |         |
   |         required by a bound introduced by this call
   |
note: required by a bound in `f`
  --> $DIR/const-block-const-bound.rs:4:15
   |
LL | const fn f<T: ~const Drop>(x: T) {}
   |               ^^^^^^^^^^^ required by this bound in `f`

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0277`.
